--- a/css/output.css
+++ b/css/output.css
@@ -523,6 +523,10 @@
     --tw-duration: 75ms;
     transition-duration: 75ms;
   }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
